# qrawl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  cli.rs  engine.rs  error.rs  errors.rs  impls.rs  infer.rs  lib.rs  log.rs  macros.rs  policy.rs  runtime.rs  selectors.rs  store.rs  tests.rs  types.rs
src/services/: fetch.rs  infer.rs  log.rs  mod.rs  scrape.rs  store.rs
src/templates/: mod.rs  qrawl_children.rs  qrawl_emails.rs
src/tools/: macros.rs  mod.rs  types.rs
src/tools/batch/: mod.rs  tests.rs
src/tools/classify/: mod.rs  tests.rs  utils.rs
src/tools/clean/: mod.rs  tests.rs  utils.rs
src/tools/extract/: mod.rs  tests.rs  types.rs  utils.rs
src/tools/fetch/: cli.rs  client.rs  headers.rs  mod.rs  profile.rs  retry.rs  strategies.rs  tests.rs  types.rs  utils.rs
src/tools/map/: mod.rs  tests.rs  utils.rs
src/tools/normalize/: mod.rs  tests.rs  utils.rs
src/tools/parse/: README.md  cli.rs  mod.rs  tests.rs  utils.rs
src/tools/scrape/: mod.rs  tests.rs  types.rs  utils.rs
src/tools/transform/: mod.rs  tests.rs
