[package]
name = "qrawl"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust toolkit to crawl web data for AI agents"
repository = "https://github.com/QLangstaff/qrawl"
homepage = "https://github.com/QLangstaff/qrawl"
documentation = "https://docs.rs/qrawl"
readme = "README.md"
keywords = ["crawler", "web-crawling", "scraper", "web-scraping", "rag"]
categories = ["web-programming::http-client", "parsing", "asynchronous", "command-line-utilities"]
rust-version = "1.74"

include = ["Cargo.toml", "README.md", "LICENSE*", "src/**"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "cookies", "brotli", "gzip", "deflate", "json", "native-tls", "stream"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
scraper = "0.19"
idna = "0.5"
regex = "1.10"
futures-util = "0.3"
dashmap = "6.0"
urlencoding = "2.1"
html-escape = "0.2"
unicode-normalization = "0.1"
once_cell = "1.19"
